--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring4</module>
         <module>spring5</module>
         <module>spring6</module>
+        <module>spring7</module>
 
         <module>example1</module>
         <module>example2</module>
@@ -28,9 +29,9 @@
         <module>example6</module>
         <module>example7</module>
         <module>example8</module>
-        <module>spring7</module>
+
         <module>internationalization</module>
-        <module>internationalization</module>
+<!--        <module>internationalization</module>-->
     </modules>
 
     <properties>
