--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /out/
+/tomcat1/target/
+/tomcat2/target/
+
+/internationalization/target/
+
+/spring1/target/
+/spring2/target/
+/spring3/target/
+/spring4/target/
+/spring5/target/
+/spring6/target/
+/spring7/target/
