--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
         <module>internationalization</module>
         <module>spring8</module>
+        <module>spring9</module>
         <!--        <module>internationalization</module>-->
     </modules>
 
