--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /spring7/target/
 /spring8/target/
 /spring9/target/
+/spring10/target/
+/spring11/target/
+/spring12/target/
+/spring13/target/
+/spring14/target/
+/spring15/target/
