--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
         <module>internationalization</module>
         <module>spring8</module>
         <module>spring9</module>
+        <module>spring10</module>
+        <module>spring11</module>
+        <module>spring12</module>
+        <module>spring13</module>
+        <module>spring14</module>
+        <module>spring15</module>
         <!--        <module>internationalization</module>-->
     </modules>
 
