--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 /spring14/target/
 /spring15/target/
 /spring16/target/
+
+/aop1/target/
+/aop2/target/
+/aop3/target/
+/aop4/target/
+/aop5/target/
