--- a/spring17/pom.xml
+++ b/spring17/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.3.7</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
